--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,7 @@
 runtime: nodejs
 env: flex
+beta_settings:
+  # The connection name of your instance, available by using
+  # 'gcloud beta sql instances describe [INSTANCE_NAME]' or from
+  # the Instance details page in the Google Cloud Platform Console.
+  cloud_sql_instances: gam-project-5a5-clr-gyw:us-central1:root
