--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start":"nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/datastore": "^5.1.0",
     "@google-cloud/storage": "^4.7.0",
     "auth": "0.0.9",
     "bcryptjs": "^2.4.3",
@@ -25,7 +26,8 @@
     "google-auth-library": "^6.0.0",
     "googleapis": "^39.2.0",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1",
+    "mysql": "^2.18.1",
+    "mysql-client": "^0.3.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth2": "^0.2.0",
