--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon src/index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "mysql-client": "^0.3.0",
+    "nodemailer": "^6.4.6",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth2": "^0.2.0",
