--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^3.1.0",
     "express-mysql-session": "^2.1.0",
     "express-session": "^1.17.0",
+    "gmail-send": "^1.8.10",
     "google-auth-library": "^6.0.0",
     "googleapis": "^39.2.0",
     "morgan": "^1.9.1",
