--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,8 @@
 runtime: nodejs
 env: flex
-# beta_settings:
-#   # The connection name of your instance, available by using
-#   # 'gcloud beta sql instances describe [INSTANCE_NAME]' or from
-#   # the Instance details page in the Google Cloud Platform Console.
-#   cloud_sql_instances: gam-sql-demo:us-central1:root
-#   skip_files:
-#   - ^node_modules/(.*/)?
-# npm audit fix
+
+runtime_config:
+  document_root: public
+
+beta_settings:
+  cloud_sql_instances: "gam-sql-demo:us-central1:root"
